--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=trP1F1wMAiMHlXIGfazxiaz4wn7adGLa&s=1"></script>
 </head>
 <body>
     <div id="root"></div>
